--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,55 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
   hello: "Hello world"
+  layout:
+    _footer:
+      about: "About"
+      contact: "Contact"
+      news: "News"
+      the: "The"
+      by: "by"
+      name: "Ruby on Rails Tutorial"
+      auhtor: "Michael Hartl"
+    _header:
+      title: "sample app"
+      home: "Home"
+      help: "Help"
+      logIn: "Log in"
+  static_pages:
+    about:
+      the: "The"
+      name: "Ruby on Rails Tutorial"
+      isA: "is a"
+      book: "book"
+      and: "and"
+      series: "screencast series"
+      to: "to teach web development with"
+      name2: "Ruby on Rails"
+      this: "This is the sample application for the tutorial."
+      about: "About"
+      linkRails: "http://www.railstutorial.org/"
+      linkRuby: "http://rubyonrails.org/"
+      linkRailsBook: "http://www.railstutorial.org/book"
+      linkSeriesRails: "http://screencasts.railstutorial.org/"
+    contact:
+      header: "Contact"
+      contact: "Contact the Ruby on Rails Tutorial about the sample app at the"
+      page: "contact page"
+      title: "Contact"
+      link: "http://www.railstutorial.org/contact"
+    help:
+      header: "Help"
+      help: "This is the home page for the"
+      name: "Ruby on Rails Tutorial"
+      sample: "sample application."
+      title: "The help"
+    home:
+      header: "Welcome to the Sample App"
+      home: "This is the home page for the"
+      name: "Ruby on Rails Tutorial"
+      sample: "sample application."
+      btnSignup: "Sign up now!"
+      altImg: "Rails logo"
+      title: "The home"
+  users:
+    new:
+      title: "Sign up"
