Chapter_9: Advanced login

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -76,3 +76,4 @@ en:
       btnSingup: "Sign up now!"
       btnLogIn: "Log in"
       new_user: "New user? "
+      remember: "Remember me on this computer"
