--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,6 +21,10 @@ en:
       log_out: "Log out"
       log_in: "Log in"
       user: "Users"
+    mailer:
+      title: "sample app"
+      hi: "Hi"
+      content: "Welcome to the Sample App! Click on the link below to activate your account:"
   static_pages:
     about:
       the: "The"
@@ -102,9 +106,31 @@ en:
       flash_success: "Account activated!"
       flash_danger: "Invalid activation link"
   user_mailer:
-    subject_account: Account activation"
+    subject_account: "Account activation"
+    subject_password: "Password reset"
     account_activation:
       title: "sample app"
       hi: "Hi"
       content: "Welcome to the Sample App! Click on the link below to activate your account:"
       activate: "Activate"
+    password_reset:
+      title: "Password reset"
+      content1: "To reset your password click the link below:"
+      content2: "This link will expire in two hours."
+      content3: "If you did not request your password to be reset, please ignore this email and your password will stay as it is."
+      reset: "Reset password"
+  password_resets:
+    create:
+      flass_info: "Email sent with password reset instructions"
+      flash_danger: "Email address not found"
+    update:
+      error: "can't be empty"
+      flash_success: "Password has been reset."
+    check_expiration:
+      flash_danger: "Password reset has expired."
+    edit:
+      title: "Reset password"
+      btn_update: "Update password"
+    new:
+      title: "Forgot password"
+      btn_submit: "Submit"
